update typewriter pages

--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -38,8 +38,13 @@
 					<p><strong>Make:</strong> Corona
 					<p><strong>Model:</strong> 3
 					<p><strong>S/N:</strong> 150301
-					<p>Text will go here.
-					<p>More text will go here.
+					<p>The second oldest machine I own, at least out of the ones I have researched so far. A tiny, well made, and beautiful example of
+            an early Corona portable. When I purchased it, the ribbon colour select lever was broken, which because of the odd design of the
+            machine made it unable to work in any way. I was able to fabricate a crude part to replace it from thin sheet metal. I hope to
+            be able to make a more permanant and original part to replace it soon.
+					<p>On nights without power, there is no better machine to type in by lamplight. The subtle glow of a flame, the feel of the keys
+            beneath your fingers, and the joy of hearing each letter make its mark has no substitute. On another note, this was one of the
+            machines I brought to my bowling league. I used it to keep score, much to the amusement of everyone else.
 					<center>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/rtilt.jpg" alt="1918 Corona 3 Right Angle" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ltilt.jpg" alt="1918 Corona 3 Left Angle" style="width:500px;"></p>
