--- a/typewriters/1927RoyalP.html
+++ b/typewriters/1927RoyalP.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -38,8 +38,11 @@
 					<p><strong>Make:</strong> Royal
 					<p><strong>Model:</strong> P
 					<p><strong>S/N:</strong> P26703
-					<p>Text will go here.
-					<p>More text will go here.
+					<p>This machine is in fairly nice condition. A previous owner had spraypainted white over the original blue, and the new paint
+            was badly peeling and cracking. Unfortunately, the original paint was unable to be restored. It was stripped off and repainted
+            in cherry red. As far as I know, the black top pieces near the ribbons is original. I made sure to keep it intact as I repainted
+            the rest.
+					<p>At some point, I plan to add reproduction decals to this machine. I just don't have time at the moment.
 					<center>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/rtilt.jpg" alt="1927 Royal P Right Angle" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/ltilt.jpg" alt="1927 Royal P Left Angle" style="width:500px;"></p>
