--- a/typewriters/1953RoyalHH.html
+++ b/typewriters/1953RoyalHH.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -38,7 +38,7 @@
 					<p><strong>Make:</strong> Royal
 					<p><strong>Model:</strong> HH
 					<p><strong>S/N:</strong> HHP-13-4977834
-					<p>Pica typeface.
+					<p>Pica typeface. This machine was given to me by good friends from church, the Chamberlins.
 					<p>More text will go here.
 					<center>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/rtilt.jpg" alt="1953 Royal HH Right Angle" style="width:500px;"></p>
