--- a/typewriters/1926CoronaFour.html
+++ b/typewriters/1926CoronaFour.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -38,10 +38,9 @@
 					<p><strong>Make:</strong> Corona
 					<p><strong>Model:</strong> Four
 					<p><strong>S/N:</strong> 1K06940
-					<p>This machine is in near mint condition. It is absolutely beautiful. As far as Coronas go, this is one of my favourites, second only to the 1936 Corona Standard, 
-					Silent, or Sterling. It seems to have the original ribbon covers, which is more than I can say for my 1925 Corona Four. The decals are stunning, and the paint is 
-					nearly flawless.
-					<p>This was given to me by my dad's cousin for my high school graduation.
+					<p>This machine is in near mint condition. It is absolutely beautiful. As far as Coronas go, this is one of my favourites, second only to the 1936 Corona Standard.
+            It seems to have the original ribbon covers, which is more than I can say for my 1925 Corona Four. The decals are stunning and the paint is nearly flawless.
+					<p>This was given to me by a cousin for my high school graduation.
 					<center>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/rtilt.jpg" alt="1926 Corona Four Right Angle" style="width:500px;"></p>
 					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/ltilt.jpg" alt="1926 Corona Four Left Angle" style="width:500px;"></p>
