add hermes rocket, fix header

--- a/typewriters/1960HermesRocket.html
+++ b/typewriters/1960HermesRocket.html
@@ -24,7 +24,7 @@
 	</script>
     <section class="headline-sec">
         <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1949 Remington All New</h3>
+            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1960 Hermes Rocket</h3>
         </div>
     </section>
     <!--HOME SECTION END-->
@@ -32,20 +32,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1949RemingtonAllNew/front.jpg" alt="1949 Remington All New Front" style="width:500px;"></center></p>
+					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/front.jpg" alt="1960 Hermes Rocket Front" style="width:500px;"></center></p>
 					<hr>
-					<p><strong>Year:</strong> 1949
-					<p><strong>Make:</strong> Remington
-					<p><strong>Model:</strong> All New
-					<p><strong>S/N:</strong>
-					<p>This machine was given to me by a good friend from church, as well as a partner in theater tech work, Becca A.
+					<p><strong>Year:</strong> 1960
+					<p><strong>Make:</strong> Hermes
+					<p><strong>Model:</strong> Rocket
+					<p><strong>S/N:</strong> 5755838
+					<p>Text will go here.
 					<p>More text will go here.
 					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949RemingtonAllNew/rtilt.jpg" alt="1949 Remington All New Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949RemingtonAllNew/ltilt.jpg" alt="1949 Remington All New Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949RemingtonAllNew/right.jpg" alt="1949 Remington All New Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949RemingtonAllNew/left.jpg" alt="1949 Remington All New Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1949RemingtonAllNew/back.jpg" alt="1949 Remington All New Back" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/rtilt.jpg" alt="1960 Hermes Rocket Right Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/ltilt.jpg" alt="1960 Hermes Rocket Left Angle" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/right.jpg" alt="1960 Hermes Rocket Right" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/left.jpg" alt="1960 Hermes Rocket Left" style="width:500px;"></p>
+					<p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/back.jpg" alt="1960 Hermes Rocket Back" style="width:500px;"></p>
 					</center>
                 </div>
             </div>
