Update Royal Futura

--- a/typewriters/1962RoyalFutura800.html
+++ b/typewriters/1962RoyalFutura800.html
@@ -17,7 +17,7 @@
     <!-- CUSTOM STYLE CSS -->
     <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
+<body >
 	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
 	<script>
 		w3IncludeHTML();
@@ -37,7 +37,7 @@
 					<p><strong>Year:</strong> 1962
 					<p><strong>Make:</strong> Royal
 					<p><strong>Model:</strong> Futura 800
-					<p><strong>S/N:</strong> 
+					<p><strong>S/N:</strong> 2A5195568
 					<p>Text will go here.
 					<p>More text will go here.
 					<center>
