--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -157,6 +157,10 @@
 							<strong>1958 Olympia SG1 De Luxe </strong><a href="http://www.dersche.id/typewriters/1958OlympiaSG1DeLuxe.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1958OlympiaSG1DeLuxe/thumbnail.jpg" alt="1958 Olympia SG1 De Luxe" style="width:150px;"></p>
 						</li>
+            <li>
+							<strong>1960 Hermes Rocket </strong><a href="http://www.dersche.id/typewriters/1960HermesRocket.html"><font size="1">more...</font></a>
+							<p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/thumbnail.jpg" alt="1960 Hermes Rocket" style="width:150px;"></p>
+						</li>
 						<li>
 							<strong>1962 Royal Futura 800 </strong><a href="http://www.dersche.id/typewriters/1962RoyalFutura800.html"><font size="1">more...</font></a>
 							<p><img src="http://www.dersche.id/assets/img/typewriters/1962RoyalFutura800/thumbnail.jpg" alt="1962 Royal Futura 800" style="width:150px;"></p>
