--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -42,7 +42,7 @@
             an early Corona portable. When I purchased it, the ribbon colour select lever was broken, which because of the odd design of the
             machine made it unable to work in any way. I was able to fabricate a crude part to replace it from thin sheet metal. I hope to
             be able to make a more permanant and original part to replace it soon.
-					<p>On nights without power, there is no better machine to type in by lamplight. The subtle glow of a flame, the feel of the keys
+					<p>On nights without power, there is no better machine to type on by lamplight. The subtle glow of a flame, the feel of the keys
             beneath your fingers, and the joy of hearing each letter make its mark has no substitute. On another note, this was one of the
             machines I brought to my bowling league. I used it to keep score, much to the amusement of everyone else.
 					<center>
