Clean up code on all pages

--- a/about.html
+++ b/about.html
@@ -2,150 +2,167 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Family Website</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
-	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3 >ABOUT US <i class="fa fa-angle-double-right "></i></h3>
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3 >ABOUT US <i class="fa fa-angle-double-right "></i></h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8" >
+          <h3><strong>Overview Of Company</strong></h3>
+          <p>
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            <strong>
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            <strong>
+              In euismod quam ac dictum varius.
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+          </p>
+          <p>
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            <strong>
+              In euismod quam ac dictum varius.
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+          </p>
+        </div>
+        <div class="col-md-4 p-top-row " >
+          <img src="assets/img/about1.jpg" class="img-responsive img-rounded" alt="" />
+        </div>
+      </div>
+      <div class="row p-top-row">
+        <div class="col-md-4 p-top-row " >
+          <img src="assets/img/about2.jpg" class="img-responsive img-rounded" alt="" />
+        </div>
+        <div class="col-md-8" >
+          <h3><strong>Future Scope</strong></h3>
+          <p>
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            <strong>
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            <strong>
+              In euismod quam ac dictum varius.
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+          </p>
+          <p>
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            <strong>
+              In euismod quam ac dictum varius.
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+          </p>
+        </div>
 
+      </div>
+      <div class="row p-top-row">
+
+        <div class="col-md-8" >
+          <h3><strong>Our Quality Policy</strong></h3>
+          <p>
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            <strong>
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            <strong>
+              In euismod quam ac dictum varius.
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+          </p>
+          <p>
+            Nunc at viverra risus.
+            In euismod quam ac dictum varius.
+            Nunc at viverra risus.
+            <strong>
+              In euismod quam ac dictum varius.
+              Nunc at viverra risus.
+              In euismod quam ac dictum varius.
+            </strong>
+            Nunc at viverra risus.
+            Nunc at viverra risus.
+          </p>
         </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8" >
-                        <h3><strong>Overview Of Company</strong></h3>
-                        <p>
-                          Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-    <strong>    Nunc at viverra risus. 
-        In euismod quam ac dictum varius. </strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                             Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-       <strong>  In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.</strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                            </p> 
-                        <p>
-                          Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-       <strong>  In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.</strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                            </p> 
-                </div>
-                <div class="col-md-4 p-top-row " >
-                    <img src="assets/img/about1.jpg" class="img-responsive img-rounded" alt="" />
-                </div>
-            </div>
-             <div class="row p-top-row">
-                 <div class="col-md-4 p-top-row " >
-                     <img src="assets/img/about2.jpg" class="img-responsive img-rounded" alt="" />
-                </div>
-                <div class="col-md-8" >
-                        <h3><strong>Future Scope</strong></h3>
-                        <p>
-                          Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-    <strong>    Nunc at viverra risus. 
-        In euismod quam ac dictum varius. </strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                             Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-       <strong>  In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.</strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                            </p> 
-                        <p>
-                          Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-       <strong>  In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.</strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                            </p> 
-                </div>
-                
-            </div>
-             <div class="row p-top-row">
-                 
-                <div class="col-md-8" >
-                        <h3><strong>Our Quality Policy</strong></h3>
-                        <p>
-                          Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-    <strong>    Nunc at viverra risus. 
-        In euismod quam ac dictum varius. </strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                             Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-       <strong>  In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.</strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                            </p> 
-                        <p>
-                          Nunc at viverra risus. 
-        In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-       <strong>  In euismod quam ac dictum varius.
-         Nunc at viverra risus. 
-        In euismod quam ac dictum varius.</strong> 
-         Nunc at viverra risus. 
-         Nunc at viverra risus.
-                            </p> 
-                </div>
-                <div class="col-md-4 p-top-row " >
-                    <img src="assets/img/about3.jpg" class="img-responsive img-rounded" alt="" />
-                </div>
-            </div>
+        <div class="col-md-4 p-top-row " >
+          <img src="assets/img/about3.jpg" class="img-responsive img-rounded" alt="" />
         </div>
-    </section>
-    <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
 </body>
 </html>
