--- a/otherLanding.html
+++ b/otherLanding.html
@@ -2,54 +2,54 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Other Projects</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Other Projects</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="assets/css/style.css" rel="stylesheet" />
 </head>
-<body >
-	<div w3-include-html="http://www.dersche.id/includes/header.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3 >Other Projects <i class="fa fa-angle-double-right "></i></h3>
-
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/header.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3 >Other Projects <i class="fa fa-angle-double-right "></i></h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" style="min-height:800px;">
+          <p>
+            <a href="http://www.dersche.id/stanton.html"><h3><strong>Margaret McDonald Stanton Memorial, I.A.C. Student, 1895</strong></h3></a>
+            This page contains a memorial to Margaret McDonald Stanton from the I.A.C. Student, which is now ISU Daily. The original content comes from the July 30, 1895 issue of the paper.
+          </p>
         </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
-                    <p><a href="http://www.dersche.id/stanton.html"><h3><strong>Margaret McDonald Stanton Memorial, I.A.C. Student, 1895</strong></h3></a>
-					This page contains a memorial to Margaret McDonald Stanton from the I.A.C. Student, which is now ISU Daily. The original content comes from the July 30, 1895 issue of the paper.
-                </div>
-            </div>
-        </div>
-    </section>
-    <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
-    <!-- CORE JQUERY  -->
-    <script src="assets/js/jquery-1.11.1.js"></script>
-    <!-- BOOTSTRAP SCRIPTS  -->
-    <script src="assets/js/bootstrap.js"></script>
-    <!-- CUSTOM SCRIPTS  -->
-    <script src="assets/js/custom.js"></script>
-    
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
+  <!-- CORE JQUERY  -->
+  <script src="assets/js/jquery-1.11.1.js"></script>
+  <!-- BOOTSTRAP SCRIPTS  -->
+  <script src="assets/js/bootstrap.js"></script>
+  <!-- CUSTOM SCRIPTS  -->
+  <script src="assets/js/custom.js"></script>
 </body>
 </html>
