--- a/typewriters/1918Corona3.html
+++ b/typewriters/1918Corona3.html
@@ -2,66 +2,70 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Family Website</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body >
-	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1918 Corona 3</h3>
-        </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
-					<hr>
-					<p><strong>Year:</strong> 1918
-					<p><strong>Make:</strong> Corona
-					<p><strong>Model:</strong> 3
-					<p><strong>S/N:</strong> 150301
-					<p>The second oldest machine I own, at least out of the ones I have researched so far. A tiny, well made, and beautiful example of
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1918 Corona 3</h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" style="min-height:800px;">
+          <p><center><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/front.jpg" alt="1918 Corona 3 Front" style="width:500px;"></center></p>
+          <hr>
+          <p><strong>Year:</strong> 1918</p>
+          <p><strong>Make:</strong> Corona</p>
+          <p><strong>Model:</strong> 3</p>
+          <p><strong>S/N:</strong> 150301</p>
+          <p>
+            The second oldest machine I own, at least out of the ones I have researched so far. A tiny, well made, and beautiful example of
             an early Corona portable. When I purchased it, the ribbon colour select lever was broken, which because of the odd design of the
             machine made it unable to work in any way. I was able to fabricate a crude part to replace it from thin sheet metal. I hope to
             be able to make a more permanant and original part to replace it soon.
-					<p>On nights without power, there is no better machine to type on by lamplight. The subtle glow of a flame, the feel of the keys
+          </p>
+          <p>
+            On nights without power, there is no better machine to type on by lamplight. The subtle glow of a flame, the feel of the keys
             beneath your fingers, and the joy of hearing each letter make its mark has no substitute. On another note, this was one of the
             machines I brought to my bowling league. I used it to keep score, much to the amusement of everyone else.
-					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/rtilt.jpg" alt="1918 Corona 3 Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ltilt.jpg" alt="1918 Corona 3 Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/right.jpg" alt="1918 Corona 3 Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/left.jpg" alt="1918 Corona 3 Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/back.jpg" alt="1918 Corona 3 Back" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ears.jpg" alt="1918 Corona 3 Ears" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/closed.jpg" alt="1918 Corona 3 Closed" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/dealer.jpg" alt="1918 Corona 3 Dealer Decal" style="width:500px;"></p>
-					</center>
-                </div>
-            </div>
+          </p>
+          <center>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/rtilt.jpg" alt="1918 Corona 3 Right Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ltilt.jpg" alt="1918 Corona 3 Left Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/right.jpg" alt="1918 Corona 3 Right" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/left.jpg" alt="1918 Corona 3 Left" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/back.jpg" alt="1918 Corona 3 Back" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/ears.jpg" alt="1918 Corona 3 Ears" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/closed.jpg" alt="1918 Corona 3 Closed" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/dealer.jpg" alt="1918 Corona 3 Dealer Decal" style="width:500px;"></p>
+          </center>
         </div>
-    </section>
-	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
 </body>
 </html>
