--- a/typewriters/1926CoronaFour.html
+++ b/typewriters/1926CoronaFour.html
@@ -2,59 +2,63 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Family Website</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body >
-	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1926 Corona Four</h3>
-        </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/front.jpg" alt="1926 Corona Four Front" style="width:500px;"></center></p>
-					<hr>
-					<p><strong>Year:</strong> 1926
-					<p><strong>Make:</strong> Corona
-					<p><strong>Model:</strong> Four
-					<p><strong>S/N:</strong> 1K06940
-					<p>This machine is in near mint condition. It is absolutely beautiful. As far as Coronas go, this is one of my favourites, second only to the 1936 Corona Standard.
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1926 Corona Four</h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" style="min-height:800px;">
+          <p><center><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/front.jpg" alt="1926 Corona Four Front" style="width:500px;"></center></p>
+          <hr>
+          <p><strong>Year:</strong> 1926</p>
+          <p><strong>Make:</strong> Corona</p>
+          <p><strong>Model:</strong> Four</p>
+          <p><strong>S/N:</strong> 1K06940</p>
+          <p>
+            This machine is in near mint condition. It is absolutely beautiful. As far as Coronas go, this is one of my favourites, second only to the 1936 Corona Standard.
             It seems to have the original ribbon covers, which is more than I can say for my 1925 Corona Four. The decals are stunning and the paint is nearly flawless.
-					<p>This was given to me by a cousin for my high school graduation.
-					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/rtilt.jpg" alt="1926 Corona Four Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/ltilt.jpg" alt="1926 Corona Four Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/right.jpg" alt="1926 Corona Four Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/left.jpg" alt="1926 Corona Four Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/back.jpg" alt="1926 Corona Four Back" style="width:500px;"></p>
-					</center>
-                </div>
-            </div>
+          </p>
+          <p>
+            This was given to me by a cousin for my high school graduation.
+          </p>
+          <center>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/rtilt.jpg" alt="1926 Corona Four Right Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/ltilt.jpg" alt="1926 Corona Four Left Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/right.jpg" alt="1926 Corona Four Right" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/left.jpg" alt="1926 Corona Four Left" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/back.jpg" alt="1926 Corona Four Back" style="width:500px;"></p>
+          </center>
         </div>
-    </section>
-	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
 </body>
 </html>
