--- a/typewriters/1926RemingtonPortable.html
+++ b/typewriters/1926RemingtonPortable.html
@@ -2,59 +2,63 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Family Website</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body > 
-	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1926 Remington Portable</h3>
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1926 Remington Portable</h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" style="min-height:800px;">
+          <p><center><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/front.jpg" alt="1926 Remington Portable Front" style="width:500px;"></center></p>
+          <hr>
+          <p><strong>Year:</strong> 1926</p>
+          <p><strong>Make:</strong> Remington</p>
+          <p><strong>Model:</strong> Portable</p>
+          <p><strong>S/N:</strong> ND69699</p>
+          <p>
+            Text will go here.
+          </p>
+          <p>
+            More text will go here.
+          </p>
+          <center>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/rtilt.jpg" alt="1926 Remington Portable Right Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/ltilt.jpg" alt="1926 Remington Portable Left Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/right.jpg" alt="1926 Remington Portable Right" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/left.jpg" alt="1926 Remington Portable Left" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/back.jpg" alt="1926 Remington Portable Back" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/closed.jpg" alt="1926 Remington Portable Closed" style="width:500px;"></p>
+          </center>
         </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/front.jpg" alt="1926 Remington Portable Front" style="width:500px;"></center></p>
-					<hr>
-					<p><strong>Year:</strong> 1926
-					<p><strong>Make:</strong> Remington
-					<p><strong>Model:</strong> Portable
-					<p><strong>S/N:</strong> ND69699
-					<p>Text will go here.
-					<p>More text will go here.
-					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/rtilt.jpg" alt="1926 Remington Portable Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/ltilt.jpg" alt="1926 Remington Portable Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/right.jpg" alt="1926 Remington Portable Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/left.jpg" alt="1926 Remington Portable Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/back.jpg" alt="1926 Remington Portable Back" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/closed.jpg" alt="1926 Remington Portable Closed" style="width:500px;"></p>
-					</center>
-                </div>
-            </div>
-        </div>
-    </section>
-	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
 </body>
 </html>
