--- a/typewriters/1927RoyalP.html
+++ b/typewriters/1927RoyalP.html
@@ -2,61 +2,65 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Family Website</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body >
-	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1927 Royal P</h3>
-        </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/front.jpg" alt="1927 Royal P Front" style="width:500px;"></center></p>
-					<hr>
-					<p><strong>Year:</strong> 1927
-					<p><strong>Make:</strong> Royal
-					<p><strong>Model:</strong> P
-					<p><strong>S/N:</strong> P26703
-					<p>This machine is in fairly nice condition. A previous owner had spraypainted white over the original blue, and the new paint
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1927 Royal P</h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" style="min-height:800px;">
+          <p><center><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/front.jpg" alt="1927 Royal P Front" style="width:500px;"></center></p>
+          <hr>
+          <p><strong>Year:</strong> 1927</p>
+          <p><strong>Make:</strong> Royal</p>
+          <p><strong>Model:</strong> P</p>
+          <p><strong>S/N:</strong> P26703</p>
+          <p>
+            This machine is in fairly nice condition. A previous owner had spraypainted white over the original blue, and the new paint
             was badly peeling and cracking. Unfortunately, the original paint was unable to be restored. It was stripped off and repainted
             in cherry red. As far as I know, the black top pieces near the ribbons is original. I made sure to keep it intact as I repainted
             the rest.
-					<p>At some point, I plan to add reproduction decals to this machine. I just don't have time at the moment.
-					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/rtilt.jpg" alt="1927 Royal P Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/ltilt.jpg" alt="1927 Royal P Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/right.jpg" alt="1927 Royal P Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/left.jpg" alt="1927 Royal P Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/back.jpg" alt="1927 Royal P Back" style="width:500px;"></p>
-					</center>
-                </div>
-            </div>
+          </p>
+          <p>
+            At some point, I plan to add reproduction decals to this machine. I just don't have time at the moment.
+          </p>
+          <center>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/rtilt.jpg" alt="1927 Royal P Right Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/ltilt.jpg" alt="1927 Royal P Left Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/right.jpg" alt="1927 Royal P Right" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/left.jpg" alt="1927 Royal P Left" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/back.jpg" alt="1927 Royal P Back" style="width:500px;"></p>
+          </center>
         </div>
-    </section>
-	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
 </body>
 </html>
