--- a/typewriters/1953RoyalHH.html
+++ b/typewriters/1953RoyalHH.html
@@ -2,58 +2,62 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <!--[if IE]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <![endif]-->
-    <title>DERSCHE.id - Family Website</title>
-    <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
-     <!-- FONTAWESOME STYLE CSS -->
-     <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
-    <!-- CUSTOM STYLE CSS -->
-    <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <![endif]-->
+  <title>DERSCHE.id - Family Website</title>
+  <!-- BOOTSTRAP CORE STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
+  <!-- FONTAWESOME STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
+  <!-- CUSTOM STYLE CSS -->
+  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
-<body >
-	<div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
-    <section class="headline-sec">
-        <div class="overlay ">
-            <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1953 Royal HH</h3>
+<body>
+  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
+  <section class="headline-sec">
+    <div class="overlay ">
+      <h3>TYPEWRITERS <i class="fa fa-angle-double-right "></i> 1953 Royal HH</h3>
+    </div>
+  </section>
+  <!--HOME SECTION END-->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12" style="min-height:800px;">
+          <p><center><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/front.jpg" alt="1953 Royal HH Front" style="width:500px;"></center></p>
+          <hr>
+          <p><strong>Year:</strong> 1953</p>
+          <p><strong>Make:</strong> Royal</p>
+          <p><strong>Model:</strong> HH</p>
+          <p><strong>S/N:</strong> HHP-13-4977834</p>
+          <p>
+            Pica typeface. This machine was given to me by good friends from church, the Chamberlins.
+          </p>
+          <p>
+            More text will go here.
+          </p>
+          <center>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/rtilt.jpg" alt="1953 Royal HH Right Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/ltilt.jpg" alt="1953 Royal HH Left Angle" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/right.jpg" alt="1953 Royal HH Right" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/left.jpg" alt="1953 Royal HH Left" style="width:500px;"></p>
+            <p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/back.jpg" alt="1953 Royal HH Back" style="width:500px;"></p>
+          </center>
         </div>
-    </section>
-    <!--HOME SECTION END-->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="min-height:800px;">
-					<p><center><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/front.jpg" alt="1953 Royal HH Front" style="width:500px;"></center></p>
-					<hr>
-					<p><strong>Year:</strong> 1953
-					<p><strong>Make:</strong> Royal
-					<p><strong>Model:</strong> HH
-					<p><strong>S/N:</strong> HHP-13-4977834
-					<p>Pica typeface. This machine was given to me by good friends from church, the Chamberlins.
-					<p>More text will go here.
-					<center>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/rtilt.jpg" alt="1953 Royal HH Right Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/ltilt.jpg" alt="1953 Royal HH Left Angle" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/right.jpg" alt="1953 Royal HH Right" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/left.jpg" alt="1953 Royal HH Left" style="width:500px;"></p>
-					<p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/back.jpg" alt="1953 Royal HH Back" style="width:500px;"></p>
-					</center>
-                </div>
-            </div>
-        </div>
-    </section>
-	<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
-	<script>
-		w3IncludeHTML();
-	</script>
+      </div>
+    </div>
+  </section>
+  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <script>
+  w3IncludeHTML();
+  </script>
 </body>
 </html>
