add organ stuff

--- a/baldwin635.html
+++ b/baldwin635.html
@@ -24,7 +24,7 @@
   </script>
   <section class="headline-sec">
     <div class="overlay ">
-      <h3 >ORGANS <i class="fa fa-angle-double-right "></i></h3>
+      <h3 >Baldwin SilentTouch 635 Church Organ <i class="fa fa-angle-double-right "></i></h3>
     </div>
   </section>
   <!--HOME SECTION END-->
@@ -34,7 +34,7 @@
         <div class="col-md-12" style="min-height:800px;">
           <br>
           <p>
-            
+
           </p>
         </div>
       </div>
